# cmake_sample

./: .gitmodules  README.md  cmake.xmind
ctest-sample/: readme.md  test_myclass.cpp
ctest-sample-fixture/: CMakeLists.txt  MyTestFixture.h  myclass.h  test_myclass.cpp
current_dir_in_multi_layers/: CMakeLists.txt
current_dir_in_multi_layers/layer1/: CMakeLists.txt
current_dir_in_multi_layers/layer1/layer2/: CMakeLists.txt
sample/app/: CMakeLists.txt  main.cpp
sample/lib/: CMakeLists.txt  foo.cpp
sample/lib/include/foo/: foo.h
